--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
         
 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-    <script src="boot.js"></script>
+    <script src="jawa.js"></script>
 </body>
 </html>
